--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="box">
-      <div class="square1">square1</div>
-      <div class="square2">square2</div>
-      <div class="square3">square3</div>
-      <div class="square4">square4</div>
-      <div class="square5">square5</div>
+      <div class="square1 square">square1</div>
+      <div class="square2 square">square2</div>
+      <div class="square3 square">square3</div>
+      <div class="square4 square">square4</div>
+      <div class="square5 square">square5</div>
     </div>
   </body>
 </html>
